package com.youkeda.application.art.article.model;

/**
 * @Author
 * @DATE 2020-03-16
 */
public enum ArticleSourceType {
    //自定义文章
    ORIGINAL,

    //爬取文章
    CRAWLING
}
