package com.youkeda.application.art.article.model;

/**
 * @Author
 * @DATE 2020-03-20
 */
public enum RefCategory {
    //故事集锦
    STORY_GROUP,

    //专家课堂
    EXPERT_CLASS,

    //官网文章
    WEBSITEARTICLE
}
